<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name" translatable="false">Simple</string>
  <string name="gender_female">Female</string>
  <string name="gender_male">Male</string>
  <string name="gender_transgender">Transgender</string>
  <string name="gender_male_letter">M</string>
  <string name="gender_female_letter">F</string>
  <string name="gender_trans_letter">T</string>
  <string name="gender_unknown_letter" translatable="false">U</string>
  <string name="api_unexpected_error">Something went wrong. Please try again.</string>
  <string name="api_network_error">No internet connection</string>
  <string name="api_server_error">Server error! Please try again later.</string>
  <string name="country_india">India</string>
  <string name="country_bangladesh">Bangladesh</string>
  <string name="country_ethiopia">Ethiopia</string>
  <string name="country_sri_lanka">Sri Lanka</string>
  <string name="country_demo">Demo Country</string>
  <string name="home_help">Help</string>
  <string name="home_settings">Settings</string>
  <string name="identifiertype_bp_passport">BP Passport</string>
  <string name="identifiertype_bangladesh_national_id">National ID</string>
  <string name="identifiertype_ethiopia_medical_record_number">Medical Record Number</string>
  <string name="identifiertype_unknown">ID</string>
  <string name="identifiertype_india_national_health_id">National Health ID</string>
  <string name="identifiertype_sri_lanka_national_id">National ID</string>
  <string name="identifiertype_sri_lanka_personal_health_number">Personal Health Number</string>
  <string name="instantsearch_hint">Name, phone, or ID</string>
  <string name="instantsearch_allowed_characters" translatable="false">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789</string>
  <string name="patientsearchresults_register_patient_rationale">Can’t find the patient in this list?</string>
  <string name="patientsearchresults_register_patient">Register as a new patient</string>
  <string name="patientsearchresults_item_phone_number">Phone</string>
  <string name="patientsearchresults_item_birthdate">Birthdate</string>
  <string name="patiententry_contentdescription_up_button">Go back to search</string>
  <string name="patiententry_full_name">Patient\'s name</string>
  <string name="patiententry_phone_number">Phone number</string>
  <string name="patiententry_bangladesh_national_id">National ID number</string>
  <string name="patiententry_ethiopia_medical_record_number">Medical Record Number</string>
  <string name="patiententry_sri_lanka_personal_health_number">Personal Health Number</string>
  <string name="patiententry_date_of_birth_unfocused">Date of birth</string>
  <string name="patiententry_date_of_birth_focused">D.O.B: DD/MM/YYYY</string>
  <string name="patiententry_dateofbirth_and_age_separator">Or</string>
  <string name="patiententry_age">Age</string>
  <string name="patiententry_gender_female" translatable="false">@string/gender_female</string>
  <string name="patiententry_gender_male" translatable="false">@string/gender_male</string>
  <string name="patiententry_gender_transgender" translatable="false">@string/gender_transgender</string>
  <string name="patiententry_street_address">House address</string>
  <string name="patiententry_street_house_road_number">House and road number</string>
  <string name="patiententry_village_colony_ward">Village / colony / ward</string>
  <string name="patiententry_village_ward">Village / ward</string>
  <string name="patiententry_kebele">Kebele</string>
  <string name="patiententry_zone">Union</string>
  <string name="patiententry_district">District</string>
  <string name="patiententry_woreda">Zone</string>
  <string name="patiententry_upazila">Upazila</string>
  <string name="patiententry_state">State</string>
  <string name="patiententry_region">Region</string>
  <string name="patiententry_doornumber_streetname">Door number, street name</string>
  <string name="patiententry_division_area">Division and area</string>
  <string name="patiententry_save_patient">Next</string>
  <string name="patiententry_error_empty_fullname">Enter patient’s full name</string>
  <string name="patiententry_error_empty_gender">Choose patient’s gender</string>
  <string name="patiententry_error_empty_colony_or_village">Required</string>
  <string name="patiententry_error_empty_district">Required</string>
  <string name="patiententry_error_state_empty">Required</string>
  <string name="patiententry_error_both_dateofbirth_and_age_empty">Enter patient’s age</string>
  <string name="patiententry_error_invalid_dateofbirth">Enter patient’s date of birth in DD/MM/YYYY</string>
  <string name="patiententry_error_dateofbirth_is_in_future">Fix patient’s date of birth</string>
  <string name="patiententry_error_phonenumber_blank">Phone number cannot be empty</string>
  <string name="patiententry_error_phonenumber_length_less">Phone number cannot be less than %1$s digits</string>
  <string name="patiententry_identifier_bp_passport">BP Passport</string>
  <string name="patiententry_consent_header">Consent:\u0020</string>
  <string name="patiententry_consent_first_para">By tapping below, you confirm that any patient data you enter here has been obtained under appropriate informed consent. This means that the patient or legal guardian knows that you are entering their personal data into the app, understands what data is being collected, and knows that they may be contacted via SMS, WhatsApp, or other methods using the phone number provided in the app.</string>
  <string name="patiententry_consent_second_para">Anyone authorized by you, or the healthcare provider for whom you work, will have access to the patient data and information you enter here. By using the app you confirm that the patient or legal guardian understands who will have access to the data obtained through this app and consents to that access.</string>
  <string name="patiententry_consent_whatsapp_sms_reminders">WhatsApp / SMS Reminders</string>
  <string name="patiententry_consent_sms_reminders">SMS Reminders</string>
  <string name="patiententry_age_exceeds_max_limit_error">Age cannot be more than 120 years</string>
  <string name="patiententry_age_exceeds_min_limit_error">Age cannot be equal to 0 years</string>
  <string name="patiententry_town_area">Town / Area</string>
  <string name="patiententry_province">Province</string>
  <string name="patientedit_full_name" translatable="false">@string/patiententry_full_name</string>
  <string name="patientedit_phone_number" translatable="false">@string/patiententry_phone_number</string>
  <string name="patientedit_gender_female" translatable="false">@string/gender_female</string>
  <string name="patientedit_gender_male" translatable="false">@string/gender_male</string>
  <string name="patientedit_gender_transgender" translatable="false">@string/gender_transgender</string>
  <string name="patientedit_error_empty_gender" translatable="false">@string/patiententry_error_empty_gender</string>
  <string name="patientedit_colony_or_village" translatable="false">@string/patiententry_village_colony_ward</string>
  <string name="patientedit_district" translatable="false">@string/patiententry_district</string>
  <string name="patientedit_state" translatable="false">@string/patiententry_state</string>
  <string name="patientedit_save_patient">Save</string>
  <string name="patientedit_error_empty_fullname" translatable="false">@string/patiententry_error_empty_fullname</string>
  <string name="patientedit_error_empty_colony_or_village" translatable="false">@string/patiententry_error_empty_colony_or_village</string>
  <string name="patientedit_error_empty_district" translatable="false">@string/patiententry_error_empty_district</string>
  <string name="patientedit_error_state_empty" translatable="false">@string/patiententry_error_state_empty</string>
  <string name="patientedit_error_phonenumber_blank" translatable="false">@string/patiententry_error_phonenumber_blank</string>
  <string name="patientedit_error_phonenumber_length_less" translatable="false">@string/patiententry_error_phonenumber_length_less</string>
  <string name="patientedit_date_of_birth_unfocused" translatable="false">@string/patiententry_date_of_birth_unfocused</string>
  <string name="patientedit_date_of_birth_focused" translatable="false">@string/patiententry_date_of_birth_focused</string>
  <string name="patientedit_dateofbirth_and_age_separator" translatable="false">@string/patiententry_dateofbirth_and_age_separator</string>
  <string name="patientedit_bp_passports_label">BP Passports</string>
  <string name="patientedit_age" translatable="false">@string/patiententry_age</string>
  <string name="patientedit_error_both_dateofbirth_and_age_empty" translatable="false">@string/patiententry_error_both_dateofbirth_and_age_empty</string>
  <string name="patientedit_error_invalid_dateofbirth" translatable="false">@string/patiententry_error_invalid_dateofbirth</string>
  <string name="patientedit_error_dateofbirth_is_in_future" translatable="false">@string/patiententry_error_dateofbirth_is_in_future</string>
  <string name="patientedit_confirm_discard_title">Discard changes?</string>
  <string name="patientedit_confirm_discard_ok">Discard</string>
  <string name="patientedit_confirm_discard_cancel">Cancel</string>
  <string name="patientedit_bangladesh_national_id" translatable="false">@string/patiententry_bangladesh_national_id</string>
  <string name="patientedit_street_address" translatable="false">@string/patiententry_street_address</string>
  <string name="patientedit_zone" translatable="false">@string/patiententry_zone</string>
  <string name="patientedit_delete_patient">Delete</string>
  <string name="patientedit_add_button">ADD</string>
  <string name="tab_patient">Patients</string>
  <string name="tab_overdue">Overdue</string>
  <string name="tab_progress">Progress</string>
  <string name="home_search_patient_name_phone">Enter name, phone or ID</string>
  <string name="patients_user_awaiting_approval_title">Waiting for approval</string>
  <string name="patients_user_awaiting_approval_message">Once approved, you will have access to patient records from your clinic.</string>
  <string name="patients_user_approved_title">You’ve been approved!</string>
  <string name="patients_awaiting_sms_verification_title">Waiting for SMS verification</string>
  <string name="patients_user_approved_message">You can now see all patient data for your clinic</string>
  <string name="patients_awaiting_sms_verification_message">Once verified, you will have access to patient records from your clinic.</string>
  <string name="patients_dismiss_user_approved_status">Got it</string>
  <string name="patients_enter_code">Enter Code</string>
  <string name="pinentry_forgotpin">Forgot PIN?</string>
  <string name="pinentry_pin_number_hint">Your security PIN</string>
  <string name="registrationphone_phone_number_label">Your phone number</string>
  <string name="registrationphone_next">Next</string>
  <string name="registrationname_name_label">Your role and full name</string>
  <string name="registrationname_next">Next</string>
  <string name="scheduleappointment_not_now">Not now</string>
  <string name="assigned_facility_view_title">Assigned facility</string>
  <string name="sheet_teleconsult_status_title">Tele-consult complete?</string>
  <string name="sheet_teleconsult_status_yes">Yes</string>
  <string name="sheet_teleconsult_status_no">No</string>
  <string name="sheet_teleconsult_status_waiting">Still waiting</string>
  <string name="sheet_teleconsult_status_done">Done</string>
  <string name="reassign_patient_title">Eligible for refills at CC. Transfer patient?</string>
  <string name="reassign_patient_description">Assign to preferred community clinic for future visits.</string>
  <string name="change_patient_facility">Change</string>
</resources>