<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/teleconsultStatusTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_24"
    android:text="@string/sheet_teleconsult_status_title"
    android:textAppearance="?attr/textAppearanceHeadline6"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <RadioGroup
    android:id="@+id/teleconsultStatusRadioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_12"
    android:layout_marginTop="@dimen/spacing_12"
    android:layout_marginEnd="@dimen/spacing_12"
    android:divider="@drawable/divider"
    android:showDividers="middle|end"
    app:layout_constraintTop_toBottomOf="@id/teleconsultStatusTitle">

    <RadioButton
      android:id="@+id/teleconsultStatusYesRadioButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="@dimen/spacing_16"
      android:paddingEnd="@dimen/spacing_0"
      android:text="@string/sheet_teleconsult_status_yes"
      android:textAppearance="?attr/textAppearanceBody1" />

    <RadioButton
      android:id="@+id/teleconsultStatusNoRadioButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="@dimen/spacing_16"
      android:paddingEnd="@dimen/spacing_0"
      android:text="@string/sheet_teleconsult_status_no"
      android:textAppearance="?attr/textAppearanceBody1" />

    <RadioButton
      android:id="@+id/teleconsultStatusWaitingRadioButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="@dimen/spacing_16"
      android:paddingEnd="@dimen/spacing_0"
      android:text="@string/sheet_teleconsult_status_waiting"
      android:textAppearance="?attr/textAppearanceBody1" />

  </RadioGroup>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/teleconsultStatusDoneButton"
    style="?attr/materialButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_16"
    android:enabled="false"
    android:text="@string/sheet_teleconsult_status_done"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/teleconsultStatusRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>
