<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:parentTag="android.support.v7.widget.CardView">

  <ProgressBar
    android:id="@+id/pinentry_progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="invisible" />

  <LinearLayout
    android:id="@+id/pinentry_pin_container"
    style="@style/Clinic.CardContentContainer.PinEntry">

    <TextView
      style="@style/Clinic.LoginPinLabel"
      android:labelFor="@+id/pinentry_pin"
      android:text="@string/pinentry_pin_number_hint" />

    <org.simple.clinic.widgets.StaggeredEditText
      android:id="@+id/pinentry_pin"
      style="@style/Clinic.StaggeredEditText.Pin"
      android:maxLength="4" />

    <TextView
      android:id="@+id/pinentry_error"
      style="@style/Clinic.V2.LoginPinErrorText"
      android:text="@string/api_network_error"
      tools:visibility="visible" />

    <Button
      android:id="@+id/pinentry_forgotpin"
      style="@style/Widget.AppCompat.Button.Borderless.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pinentry_forgotpin" />
  </LinearLayout>
</merge>
