<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/patients_user_status_awaitingsmsverification"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="bottom"
  android:background="@color/black"
  android:padding="@dimen/spacing_12"
  tools:ignore="Overdraw"
  tools:showIn="@layout/screen_patients">

  <TextView
    android:id="@+id/awaitingVerificationTitle"
    style="@style/Clinic.UserApprovalStatusTitle"
    android:layout_marginStart="@dimen/spacing_12"
    android:layout_toStartOf="@+id/enterCodeButton"
    android:text="@string/patients_awaiting_sms_verification_title" />

  <TextView
    style="@style/Clinic.UserApprovalStatusMessage"
    android:layout_below="@+id/awaitingVerificationTitle"
    android:layout_alignStart="@+id/awaitingVerificationTitle"
    android:layout_marginTop="@dimen/spacing_4"
    android:layout_toStartOf="@+id/enterCodeButton"
    android:text="@string/patients_awaiting_sms_verification_message" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/enterCodeButton"
    style="@style/Clinic.SnackbarAction"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_centerVertical="true"
    android:text="@string/patients_enter_code" />
</RelativeLayout>
