<?xml version="1.0" encoding="utf-8"?>
<org.simple.clinic.registration.phone.RegistrationPhoneScreen android:id="@+id/registrationphone_root"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <FrameLayout
    android:id="@+id/registrationphone_logo_container"
    style="@style/Clinic.LoginLogoContainer">

    <ImageButton
      android:id="@+id/registrationphone_back"
      style="@style/Clinic.LoginBackButton"
      android:contentDescription="@string/registrationphone_cd_go_back"
      android:src="@drawable/ic_arrow_back_24dp" />

    <TextView
      style="@style/Clinic.LoginLogo"
      android:text="@string/app_name" />
  </FrameLayout>

  <View style="@style/Clinic.LoginLogoContainerOverflow" />

  <android.support.v7.widget.CardView
    android:id="@+id/registrationphone_card"
    style="@style/Clinic.LoginCard"
    android:layout_below="@+id/registrationphone_logo_container">

    <LinearLayout style="@style/Clinic.LoginCardContentContainer">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:labelFor="@+id/registrationphone_phone"
        android:text="@string/registrationphone_phone_number_label"
        android:textColor="@color/black_opacity_80"
        android:textSize="@dimen/textsize_18" />

      <EditText
        android:id="@+id/registrationphone_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:textSize="@dimen/textsize_18" />
    </LinearLayout>
  </android.support.v7.widget.CardView>

  <Button
    android:id="@+id/registrationphone_next"
    style="@style/Clinic.LoginProceedButton"
    android:text="@string/registrationphone_next" />
</org.simple.clinic.registration.phone.RegistrationPhoneScreen>
